--- a/style.css
+++ b/style.css
@@ -12,7 +12,45 @@
     --orange:#FC7614;
     --white:#FFF;
     --very-dark-blue:#131518;
-    --black-gradient: radial-gradient(98.96% 98.96% at 50% 8%, #232A34 100%);
-    
+    --black-gradient: radial-gradient(98.96% 98.96% at 50% 0%, #232A34 0%, #181E27 100%);
 
 }
+
+body {
+    background-color: var(--very-dark-blue);
+    height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.Card {
+    background: var(--black-gradient);
+    max-width: 412px;
+    padding: 32px;
+    border-radius: 30px;
+}
+
+.Card h1 {
+    color:var(--white);
+
+}
+
+.Card p {
+    color: var(--white);
+}
+
+
+.estrela {
+    background-color: var(--dark-blue);
+    width: 48px;
+    height: 48px;
+}
+
+
+
+
+
+
