--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Overpass", sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
 :root {
@@ -33,20 +34,31 @@ body {
     border-radius: 30px;
 }
 
-.Card h1 {
-    color:var(--white);
-
-}
-
-.Card p {
-    color: var(--white);
-}
-
-
 .estrela {
     background-color: var(--dark-blue);
     width: 48px;
     height: 48px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 50%;
+
+    margin-bottom: 30%;
+}
+
+.Card h1 {
+    color:var(--white);
+    font-size: 28px;
+    margin-bottom: 15px;
+    
+}
+
+.Card p {
+    color: var(--white);
+    font-size: 15px;
+    line-height: 24px;
 }
 
 
