--- a/style.css
+++ b/style.css
@@ -38,15 +38,13 @@ body {
     background-color: var(--dark-blue);
     width: 48px;
     height: 48px;
-
     display: flex;
     justify-content: center;
     align-items: center;
-
     border-radius: 50%;
-
-    margin-bottom: 30%;
+    margin-bottom: 30px;
 }
+
 
 .Card h1 {
     color:var(--white);
@@ -59,6 +57,28 @@ body {
     color: var(--white);
     font-size: 15px;
     line-height: 24px;
+    margin-bottom: 24px;
+}
+
+.botoes {
+    display: flex;
+    justify-content: space-between;
+}
+
+.botoes button {
+    width: 51px;
+    height: 51px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    border-radius: 50%;
+    border: none;
+    color: var(--medium-grey);
+    background-color: var(--dark-blue);
+}
+
+.botoes button:hover {
+    
 }
 
 
