--- a/style.css
+++ b/style.css
@@ -94,7 +94,8 @@ body {
 }
 
 
-.Card > button {
+.Card > a {
+    display: block;
     width: 100%;
     padding: 13px;
     background-color: var(--orange);
@@ -106,11 +107,13 @@ body {
     text-transform: uppercase;
     letter-spacing: 2px;
     color: var(--white);
+    text-align: center;
+    text-decoration: none;
 
     transition: all ease-in-out 0.3s;
 }
 
-.Card > button:hover {
+.Card > a:hover {
     color: var(--orange);
     background-color: var(--white);
     cursor: pointer;
