--- a/pages/agradecimento.css
+++ b/pages/agradecimento.css
@@ -33,3 +33,17 @@ body {
     padding: 32px;
     border-radius: 30px;
 }
+
+.Card h1 {
+    color:var(--white);
+    font-size: 28px;
+    margin-bottom: 15px;
+    
+}
+
+.Card p {
+    color: var(--white);
+    font-size: 15px;
+    line-height: 24px;
+    margin-bottom: 24px;
+}
