--- a/pages/agradecimento.css
+++ b/pages/agradecimento.css
@@ -29,10 +29,29 @@ body {
 
 .Card {
     background: var(--black-gradient);
+    text-align: center;
     max-width: 412px;
-    padding: 32px;
+    padding:  45px 32px;
     border-radius: 30px;
 }
+
+.Card img {
+    margin-bottom: 32px;
+}
+
+.Card .paragrafo_nota {
+    background-color: var(--dark-blue);
+    width: fit-content;
+    margin: auto;
+    padding: 4px 18px;
+    border-radius: 22px;
+
+    font-size: 15px;
+    color: var(--orange);
+
+    margin-bottom: 32px;
+}
+
 
 .Card h1 {
     color:var(--white);
@@ -45,5 +64,4 @@ body {
     color: var(--white);
     font-size: 15px;
     line-height: 24px;
-    margin-bottom: 24px;
 }
